--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,35 +8,34 @@ body {
     background-color: #d9dcd6;
 }
 
-.header {
+header  {
     padding: 20px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     background-color: #2a607c;
     color: #ffffff;
 }
 
-.header h1 {
+header h1 {
     display: inline-block;
     font-size: 48px;
 }
 
-.header h1 .seo {
+header h1  {
     color: #d9dcd6;
 }
 
-.header div {
+header  {
     padding-top: 15px;
-    margin-right: 20px;
-    float: right;
+    
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    font-size: 20px;
+    font-size: 20px; 
 }
 
-.header div ul {
+header  ul {
     list-style-type: none;
 }
 
-.header div ul li {
+header  ul li {
     display: inline-block;
     margin-left: 25px;
 }
@@ -69,7 +68,7 @@ p {
     margin-left: 25px;
 }
 
-content {
+.content {
     width: 75%;
     display: inline-block;
     margin-left: 20px;
@@ -86,7 +85,7 @@ content {
     background-color: #2589bd;
 }
 
-.benefit-lead {
+ .benefit-lead {
     margin-bottom: 32px;
     color: #ffffff;
 }
@@ -134,7 +133,7 @@ content {
     max-width: 150px;
 }
 
-.search-engine-optimization {
+ .search-engine-optimization {
     margin-bottom: 20px;
     padding: 50px;
     height: 300px;
