--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -49,7 +49,7 @@ p {
     font-size: 16px;
 }
 
-.hero {
+ .hero {
     height: 800px;
     width: 100%;
     margin-bottom: 25px;
@@ -187,7 +187,7 @@ p {
     font-size: 36px;
 }
 
-footer {
+.footer {
     padding: 30px;
     clear: both;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
